--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,10 @@
 {
-  "database": {
-    "rules": "database.rules.json"
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "dist/microproyecto",
+    "public": "dist/Microproyecto",
     "ignore": [
       "firebase.json",
       "**/.*",
